<resources>
<string name="app_name">TesteEmulator</string>
<string name="txt_bem_vindo">Cadastro de Aluno</string>
<string name="txt_hint_nome">Nome do aluno</string>
<string name="txt_hint_email">E-mail</string>
<string name="txt_hint_telefone">Telefone</string>
<string name="txt_hint_cidade">Cidade</string>
<string name="txt_hint_uf">UF</string>
<string name="txt_hint_curso">Curso</string>
<string name="txt_hint_periodo">Período</string>
<string name="txt_btn_salvar">Salvar</string>
<string name="txt_btn_limpar">Limpar</string>
<string name="txt_confirmacao_dados">Confirmação dos dados</string>
<string name="txt_dados">Dados digitados...</string>
</resources>