<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <TextView
        android:id="@+id/txtBemVindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bem_vindo"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtNomeAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/txt_hint_nome"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/txt_hint_telefone"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_hint_cidade"
            android:layout_weight="1"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_hint_uf"
            android:maxLength="2"
            android:layout_weight="3"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_hint_curso"
            android:layout_weight="1"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtPeriodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/txt_hint_periodo"
            android:layout_weight="2"
            android:autofillHints="" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGravar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:text="@string/txt_btn_salvar" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/txt_btn_limpar"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>